--- a/style/_greenstart.scss
+++ b/style/_greenstart.scss
@@ -5,7 +5,8 @@
       rgba(0, 0, 0, 0.5),
       rgba(0, 0, 0, 0.7)
     ),
-    url(/images/greenstart.png) center center;
+    url(/images/greenstart.png) no-repeat center fixed;
+  background-size: cover;
 
   .heading.green {
     color: #40ba7b;
