--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -11,8 +11,10 @@ nav {
   ul {
     list-style: none;
     padding: 0;
-    float: right;
     margin-right: 7px;
+    margin-top: 30px;
+    display: flex;
+    float: right;
 
     a {
       color: white;
@@ -26,14 +28,12 @@ nav {
     }
 
     li {
-      display: inline-block;
-      line-height: 80px;
       margin: 15px 14px;
     }
   }
 
   #menu-icon {
-    position: fixed;
+    position: absolute;
     right: 20px;
     top: 2px;
     color: white;
@@ -56,15 +56,16 @@ nav {
     ul {
       position: fixed;
       top: 0;
+      margin-top: 0;
       height: 100vh;
       width: 100%;
-      background: green;
+      background: #38ad71;
       justify-content: center;
       align-items: center;
-      display: flex;
       flex-direction: column;
       right: -120%;
       transition: all 2s;
+      overflow: hidden;
 
       li {
         font-size: 1.3em;
