--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -1,17 +1,136 @@
-.header.news {
-  height: auto;
+.article_header {
+  nav {
+    border-bottom: 1px solid black;
+    ul {
+      a {
+        color: black;
+        transition: all 0.3s ease-in-out;
+      }
+
+      a:hover {
+        color: green;
+      }
+    }
+
+    i {
+      color: black;
+    }
+  }
 }
 
-.media_events.news {
+.latest_news.newscard {
   background: white;
 }
 
-.mini_grid {
-  .cards {
-    grid-template-columns: 1fr;
+.category {
+  display: flex;
+  margin: 50px 0 50px 100px;
 
-    .card {
-      margin-bottom: 40px;
+  .child {
+    margin-right: 10px;
+    font-weight: 600;
+  }
+
+  .child.green {
+    color: #40ba7b;
+  }
+
+  .child.grey {
+    color: #858585;
+  }
+}
+
+.article {
+  display: grid;
+  grid-template-columns: 3.5fr 1fr;
+
+  .md_heading {
+    width: 100%;
+    margin-bottom: 50px;
+  }
+
+  .image {
+    height: 35%;
+    width: 100%;
+
+    img {
+      height: 100%;
+      width: 100%;
+      border-radius: 10px;
+      object-fit: cover;
+    }
+  }
+
+  &_detail {
+    width: 80%;
+    display: flex;
+    margin: 20px 0 40px 0;
+
+    .child {
+      margin-right: 10px;
+      font-weight: 600;
+    }
+
+    .child.green {
+      color: #40ba7b;
+    }
+  }
+
+  &_body {
+    padding: 0 0 0 100px;
+    width: 80%;
+
+    .article_text {
+      p {
+        font-weight: 300;
+      }
+    }
+
+    .tag {
+      font-size: 0.8em;
+
+      .thin {
+        color: #40ba7b;
+      }
+    }
+  }
+
+  .share_article {
+    display: flex;
+    padding: 5px 10px;
+    border: 1.5px solid #858585;
+    border-radius: 5px;
+    justify-content: space-between;
+    align-items: center;
+    margin: 30px auto;
+
+    .text {
+      font-weight: 600;
+    }
+
+    .social_icons {
+      display: flex;
+
+      .item {
+        margin-right: 5px;
+      }
+    }
+  }
+
+  .search {
+    border: 1px solid black;
+    padding: 20px;
+    height: 20%;
+    width: 100%;
+
+    .iconify.search {
+      float: right;
+      position: relative;
+      z-index: 2;
+    }
+
+    label {
+      display: block;
     }
   }
 }
