--- a/style/main.css
+++ b/style/main.css
@@ -730,7 +730,7 @@ nav #menu-icon {
   display: none;
 }
 
-@media screen and (max-width: 1152px) {
+@media screen and (max-width: 1194px) {
   nav {
     border: none;
   }
@@ -990,21 +990,173 @@ nav #menu-icon {
   }
 }
 
-.header.news {
-  height: auto;
+.article_header nav {
+  border-bottom: 1px solid black;
 }
 
-.media_events.news {
+.article_header nav ul a {
+  color: black;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.article_header nav ul a:hover {
+  color: green;
+}
+
+.article_header nav i {
+  color: black;
+}
+
+.latest_news.newscard {
   background: white;
 }
 
-.mini_grid .cards {
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
+.category {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 50px 0 50px 100px;
 }
 
-.mini_grid .cards .card {
-  margin-bottom: 40px;
+.category .child {
+  margin-right: 10px;
+  font-weight: 600;
+}
+
+.category .child.green {
+  color: #40ba7b;
+}
+
+.category .child.grey {
+  color: #858585;
+}
+
+.article {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3.5fr 1fr;
+      grid-template-columns: 3.5fr 1fr;
+}
+
+.article .md_heading {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.article .image {
+  height: 35%;
+  width: 100%;
+}
+
+.article .image img {
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.article_detail {
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 20px 0 40px 0;
+}
+
+.article_detail .child {
+  margin-right: 10px;
+  font-weight: 600;
+}
+
+.article_detail .child.green {
+  color: #40ba7b;
+}
+
+.article_body {
+  padding: 0 0 0 100px;
+  width: 80%;
+}
+
+.article_body .article_text p {
+  font-weight: 300;
+}
+
+.article_body .tag {
+  font-size: 0.8em;
+}
+
+.article_body .tag .thin {
+  color: #40ba7b;
+}
+
+.article .share_article {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 5px 10px;
+  border: 1.5px solid #858585;
+  border-radius: 5px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 30px auto;
+}
+
+.article .share_article .text {
+  font-weight: 600;
+}
+
+.article .share_article .social_icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.article .share_article .social_icons .item {
+  margin-right: 5px;
+}
+
+.article .search {
+  border: 1px solid black;
+  padding: 20px;
+  height: 20%;
+  width: 100%;
+}
+
+.article .search .iconify.search {
+  float: right;
+  position: relative;
+  z-index: 2;
+}
+
+.article .search label {
+  display: block;
+}
+
+.latest_news.media {
+  background: url(/images/landingpagebg.png) no-repeat right top;
+}
+
+.latest_news.media .thin.date {
+  font-size: 0.85em;
+  margin: 10px auto 20px auto;
+  width: 85%;
+}
+
+.latest_news.media .bold.title {
+  margin-bottom: 0px;
+  width: 85%;
+  margin: auto;
+}
+
+.latest_news.media .thin.description {
+  margin: 0 auto 20px 0;
+  padding: 0;
 }
 
 * {
