--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -4,15 +4,16 @@ nav {
   border-bottom: 1px solid white;
 
   img {
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 20px;
+    margin-left: 20px;
+    height: 50px;
   }
 
   ul {
     list-style: none;
     padding: 0;
     margin-right: 7px;
-    margin-top: 30px;
+    margin-top: 20px;
     display: flex;
     float: right;
 
@@ -44,7 +45,7 @@ nav {
   }
 }
 
-@media screen and (max-width: 1194px) {
+@media screen and (max-width: 1180px) {
   nav {
     border: none;
 
