--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -41,8 +41,7 @@
 }
 
 .article {
-  display: grid;
-  grid-template-columns: 3.5fr 1fr;
+  display: flex;
 
   .md_heading {
     width: 100%;
@@ -50,7 +49,7 @@
   }
 
   .image {
-    height: 35%;
+    height: auto;
     width: 100%;
 
     img {
@@ -77,6 +76,7 @@
   }
 
   &_body {
+    flex: 2;
     padding: 0 0 0 100px;
     width: 80%;
 
@@ -97,7 +97,7 @@
 
   .share_article {
     display: flex;
-    padding: 5px 10px;
+    padding: 5px 20px 5px 10px;
     border: 1.5px solid #858585;
     border-radius: 5px;
     justify-content: space-between;
@@ -118,10 +118,13 @@
   }
 
   .search {
-    border: 1px solid black;
-    padding: 20px;
-    height: 20%;
-    width: 100%;
+    border: 1px solid #c4c4c4;
+    background: #f5f5f5;
+    border-radius: 10px;
+    padding: 20px 10px 40px 10px;
+    margin: 0 30px;
+    flex: 1.3;
+    height: min-content;
 
     .iconify.search {
       float: right;
@@ -131,6 +134,15 @@
 
     label {
       display: block;
+    }
+
+    input {
+      padding: 10px;
+      border: 0.2px solid #858585;
+      border-radius: 8px;
+      width: 90%;
+      margin-left: 5px;
+      font-family: "Roboto";
     }
   }
 }
