--- a/style/main.css
+++ b/style/main.css
@@ -688,15 +688,16 @@ nav {
 }
 
 nav img {
-  margin-top: 10px;
-  margin-left: 10px;
+  margin-top: 20px;
+  margin-left: 20px;
+  height: 50px;
 }
 
 nav ul {
   list-style: none;
   padding: 0;
   margin-right: 7px;
-  margin-top: 30px;
+  margin-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -730,7 +731,7 @@ nav #menu-icon {
   display: none;
 }
 
-@media screen and (max-width: 1194px) {
+@media screen and (max-width: 1180px) {
   nav {
     border: none;
   }
@@ -1033,10 +1034,9 @@ nav #menu-icon {
 }
 
 .article {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 3.5fr 1fr;
-      grid-template-columns: 3.5fr 1fr;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .article .md_heading {
@@ -1045,7 +1045,7 @@ nav #menu-icon {
 }
 
 .article .image {
-  height: 35%;
+  height: auto;
   width: 100%;
 }
 
@@ -1075,6 +1075,9 @@ nav #menu-icon {
 }
 
 .article_body {
+  -webkit-box-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
   padding: 0 0 0 100px;
   width: 80%;
 }
@@ -1095,7 +1098,7 @@ nav #menu-icon {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 5px 10px;
+  padding: 5px 20px 5px 10px;
   border: 1.5px solid #858585;
   border-radius: 5px;
   -webkit-box-pack: justify;
@@ -1122,10 +1125,17 @@ nav #menu-icon {
 }
 
 .article .search {
-  border: 1px solid black;
-  padding: 20px;
-  height: 20%;
-  width: 100%;
+  border: 1px solid #c4c4c4;
+  background: #f5f5f5;
+  border-radius: 10px;
+  padding: 20px 10px 40px 10px;
+  margin: 0 30px;
+  -webkit-box-flex: 1.3;
+      -ms-flex: 1.3;
+          flex: 1.3;
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
 }
 
 .article .search .iconify.search {
@@ -1136,6 +1146,15 @@ nav #menu-icon {
 
 .article .search label {
   display: block;
+}
+
+.article .search input {
+  padding: 10px;
+  border: 0.2px solid #858585;
+  border-radius: 8px;
+  width: 90%;
+  margin-left: 5px;
+  font-family: "Roboto";
 }
 
 .latest_news.media {
