--- a/style/_news.scss
+++ b/style/_news.scss
@@ -1,6 +1,12 @@
 .latest_news.media {
   background: url(/images/landingpagebg.png) no-repeat right top;
 
+  .news {
+    .cards {
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    }
+  }
+
   .thin.date {
     font-size: 0.85em;
     margin: 10px auto 20px auto;
