--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -18,6 +18,25 @@
   }
 }
 
+@media screen and (max-width: 1180px) {
+  .article_header {
+    nav {
+      border: none;
+
+      img {
+        height: 40px;
+        width: auto;
+      }
+
+      ul {
+        a {
+          color: white;
+        }
+      }
+    }
+  }
+}
+
 .latest_news.newscard {
   background: white;
 }
