--- a/style/main.css
+++ b/style/main.css
@@ -1009,6 +1009,19 @@ nav #menu-icon {
   color: black;
 }
 
+@media screen and (max-width: 1180px) {
+  .article_header nav {
+    border: none;
+  }
+  .article_header nav img {
+    height: 40px;
+    width: auto;
+  }
+  .article_header nav ul a {
+    color: white;
+  }
+}
+
 .latest_news.newscard {
   background: white;
 }
