--- a/style/_greenstart.scss
+++ b/style/_greenstart.scss
@@ -3,9 +3,9 @@
       to right,
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.6)
+      rgba(0, 0, 0, 0.5)
     ),
-    url(/images/greenstart.png) no-repeat center fixed;
+    url(/images/greenstartbg.png) no-repeat center fixed;
   background-size: cover;
 
   .heading.green {
