--- a/style/_member.scss
+++ b/style/_member.scss
@@ -4,10 +4,10 @@
   background: linear-gradient(
       to right,
       rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.6)
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.4)
     ),
-    url(/images/memberbg.png) no-repeat center fixed;
+    url(/images/memberbg1.png) no-repeat center fixed;
   background-size: cover;
 }
 
