--- a/style/_news.scss
+++ b/style/_news.scss
@@ -2,10 +2,11 @@
   background: linear-gradient(
       to right,
       rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.6)
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.4)
     ),
     url(/images/news.png) no-repeat center fixed;
+  background-size: cover;
 }
 
 .latest_news.media {
