--- a/style/main.css
+++ b/style/main.css
@@ -24,8 +24,8 @@
 }
 
 .header.agenda {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.4)), color-stop(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.7))), url(/images/agenda.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url(/images/agenda.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url(/images/agenda.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(/images/agenda.png) no-repeat center fixed;
 }
 
 .agenda_wrapper {
@@ -394,8 +394,8 @@
 }
 
 .header.bg {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.6))), url(/images/memberbg.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(/images/memberbg.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(/images/memberbg1.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(/images/memberbg1.png) no-repeat center fixed;
   background-size: cover;
 }
 
@@ -569,8 +569,8 @@
 }
 
 .header.greenstart {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.6))), url(/images/greenstart.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(/images/greenstart.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url(/images/greenstartbg.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(/images/greenstartbg.png) no-repeat center fixed;
   background-size: cover;
 }
 
@@ -1189,8 +1189,9 @@ nav #menu-icon {
 }
 
 .header.news {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.6))), url(/images/news.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(/images/news.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(/images/news.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(/images/news.png) no-repeat center fixed;
+  background-size: cover;
 }
 
 .latest_news.media {
@@ -1220,8 +1221,9 @@ nav #menu-icon {
 }
 
 .header.policy {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.6))), url(/images/policy.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.6)), url(/images/policy.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(/images/policy.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(/images/policy.png) no-repeat center fixed;
+  background-size: cover;
 }
 
 * {
