--- a/style/_policy.scss
+++ b/style/_policy.scss
@@ -2,8 +2,9 @@
   background: linear-gradient(
       to right,
       rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.6)
+      rgba(0, 0, 0, 0.3),
+      rgba(0, 0, 0, 0.4)
     ),
     url(/images/policy.png) no-repeat center fixed;
+  background-size: cover;
 }
