--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -151,7 +151,7 @@
       left: -40px;
       z-index: 1;
       border: none;
-      background: transparent;
+      background: white;
       cursor: pointer;
       padding: 2px;
       font-size: 1.2em;
