--- a/style/_media.scss
+++ b/style/_media.scss
@@ -1,5 +1,5 @@
 .media_events {
-  background: url(/images/landingpagebg.png) top center;
+  background: url(../images/landingpagebg.png) top center;
   background-repeat: repeat-x;
   .grid {
     display: grid;
