--- a/style/_mixins.scss
+++ b/style/_mixins.scss
@@ -87,7 +87,7 @@ $accent-color: #40ba7b;
   align-items: center;
 
   .membership {
-    background: url(/images/membership.png) no-repeat center center;
+    background: url(../images/membership.png) no-repeat center center;
     width: 75%;
     margin: auto;
     padding: 50px;
