--- a/style/_policy.scss
+++ b/style/_policy.scss
@@ -5,6 +5,6 @@
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.4)
     ),
-    url(/images/policy.png) no-repeat center fixed;
+    url(../images/policy.png) no-repeat center fixed;
   background-size: cover;
 }
