--- a/style/_about.scss
+++ b/style/_about.scss
@@ -48,7 +48,7 @@
 }
 
 .team {
-  background: url(/images/team.png) no-repeat center center;
+  background: url(../images/team.png) no-repeat center center;
   .team_body {
     @include latest;
   }
@@ -56,7 +56,7 @@
 
 @media (max-width: 718px) {
   .team {
-    background: url(/images/team.png) repeat top left;
+    background: url(../images/team.png) repeat top left;
     .team_body {
       width: 70%;
       margin: auto;
@@ -83,28 +83,20 @@
   }
 }
 
-// .latest_news.hover {
-//   img {
-//     filter: grayscale(100%);
-//     -webkit-filter: grayscale(100%);
-//   }
-// }
-
-// .latest_news.hover {
-//   .card:hover {
-//     img {
-//       filter: none;
-//       -webkit-filter: grayscale(0);
-//     }
-//   }
-// }
+.latest_news.team {
+  .news {
+    .cards {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+  }
+}
 
 .other {
   justify-content: flex-start !important;
 }
 
 .green_economy {
-  background: url(/images/greeneco.png);
+  background: url(../images/greeneco.png);
   color: white;
   margin: 50px 0px;
   padding: 30px 0px;
