--- a/style/_news.scss
+++ b/style/_news.scss
@@ -5,12 +5,12 @@
       rgba(0, 0, 0, 0.3),
       rgba(0, 0, 0, 0.4)
     ),
-    url(/images/news.png) no-repeat center fixed;
+    url(../images/news.png) no-repeat center fixed;
   background-size: cover;
 }
 
 .latest_news.media {
-  background: url(/images/landingpagebg.png) no-repeat right top;
+  background: url(../images/landingpagebg.png) no-repeat right top;
 
   .news {
     .cards {
