--- a/style/main.css
+++ b/style/main.css
@@ -24,13 +24,13 @@
 }
 
 .header.agenda {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url(/images/agenda.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(/images/agenda.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url(../images/agenda.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(../images/agenda.png) no-repeat center fixed;
 }
 
 .agenda_wrapper {
   width: 100%;
-  background: url(/images/member.png) no-repeat center bottom;
+  background: url(../images/member.png) no-repeat center bottom;
   background-size: cover;
   padding-top: 20px;
 }
@@ -91,7 +91,7 @@
 }
 
 .agenda_member .membership {
-  background: url(/images/membership.png) no-repeat center center;
+  background: url(../images/membership.png) no-repeat center center;
   width: 75%;
   margin: auto;
   padding: 50px;
@@ -153,7 +153,7 @@
   padding: 50px 40px 50px 40px;
   color: white;
   background: #858585;
-  background: linear-gradient(175deg, black 0%, black 50%, rgba(17, 1, 1, 0) 100%), url(/images/bottom.png) no-repeat bottom right;
+  background: linear-gradient(175deg, black 0%, black 50%, rgba(17, 1, 1, 0) 100%), url(../images/bottom.png) no-repeat bottom right;
 }
 
 .key_focus .number_cards {
@@ -209,7 +209,7 @@
 }
 
 .about_member .membership {
-  background: url(/images/membership.png) no-repeat center center;
+  background: url(../images/membership.png) no-repeat center center;
   width: 75%;
   margin: auto;
   padding: 50px;
@@ -280,7 +280,7 @@
 }
 
 .team {
-  background: url(/images/team.png) no-repeat center center;
+  background: url(../images/team.png) no-repeat center center;
 }
 
 .team .team_body {
@@ -327,7 +327,7 @@
 
 @media (max-width: 718px) {
   .team {
-    background: url(/images/team.png) repeat top left;
+    background: url(../images/team.png) repeat top left;
   }
   .team .team_body {
     width: 70%;
@@ -363,6 +363,11 @@
   font-weight: 400;
 }
 
+.latest_news.team .news .cards {
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
 .other {
   -webkit-box-pack: start !important;
       -ms-flex-pack: start !important;
@@ -370,7 +375,7 @@
 }
 
 .green_economy {
-  background: url(/images/greeneco.png);
+  background: url(../images/greeneco.png);
   color: white;
   margin: 50px 0px;
   padding: 30px 0px;
@@ -394,8 +399,8 @@
 }
 
 .header.bg {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(/images/memberbg1.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(/images/memberbg1.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(../images/memberbg1.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(../images/memberbg1.png) no-repeat center fixed;
   background-size: cover;
 }
 
@@ -404,7 +409,7 @@
 }
 
 .membership_benefit {
-  background: url(/images/memberbenefit.png);
+  background: url(../images/memberbenefit.png);
   width: 90%;
   margin: 150px auto 20px auto;
   border-radius: 20px;
@@ -475,7 +480,7 @@
 }
 
 .join {
-  background: url(/images/greeneco.png) bottom;
+  background: url(../images/greeneco.png) bottom;
   padding: 10px 40px;
   color: white;
 }
@@ -488,7 +493,7 @@
 }
 
 .membership_category {
-  background: url(/images/greeneco.png) no-repeat top;
+  background: url(../images/greeneco.png) no-repeat top;
   background-size: 100% 60%;
   padding-top: 50px;
   margin-top: 20px;
@@ -569,8 +574,8 @@
 }
 
 .header.greenstart {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url(/images/greenstartbg.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(/images/greenstartbg.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.5))), url(../images/greenstartbg.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.5)), url(../images/greenstartbg.png) no-repeat center fixed;
   background-size: cover;
 }
 
@@ -600,7 +605,7 @@
 }
 
 .mission_wrapper {
-  background: url(/images/greeneco.png) no-repeat center center;
+  background: url(../images/greeneco.png) no-repeat center center;
   padding: 20px 0;
 }
 
@@ -619,7 +624,7 @@
 }
 
 .manifesto {
-  background: linear-gradient(169deg, black 0%, black 35%, rgba(17, 1, 1, 0) 100%), url(/images/Group.png) right bottom;
+  background: linear-gradient(169deg, black 0%, black 35%, rgba(17, 1, 1, 0) 100%), url(../images/Group.png) right bottom;
   width: 90%;
   margin: 150px auto 20px auto;
   border-radius: 20px;
@@ -733,6 +738,7 @@ nav #menu-icon {
   nav img {
     margin-top: 20px;
     width: 120px;
+    height: 55px;
   }
   nav ul {
     position: fixed;
@@ -926,7 +932,7 @@ nav #menu-icon {
 }
 
 .media_events {
-  background: url(/images/landingpagebg.png) top center;
+  background: url(../images/landingpagebg.png) top center;
   background-repeat: repeat-x;
 }
 
@@ -1201,13 +1207,13 @@ nav #menu-icon {
 }
 
 .header.news {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(/images/news.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(/images/news.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(../images/news.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(../images/news.png) no-repeat center fixed;
   background-size: cover;
 }
 
 .latest_news.media {
-  background: url(/images/landingpagebg.png) no-repeat right top;
+  background: url(../images/landingpagebg.png) no-repeat right top;
 }
 
 .latest_news.media .news .cards {
@@ -1233,8 +1239,8 @@ nav #menu-icon {
 }
 
 .header.policy {
-  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(/images/policy.png) no-repeat center fixed;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(/images/policy.png) no-repeat center fixed;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.3)), color-stop(rgba(0, 0, 0, 0.3)), to(rgba(0, 0, 0, 0.4))), url(../images/policy.png) no-repeat center fixed;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4)), url(../images/policy.png) no-repeat center fixed;
   background-size: cover;
 }
 
@@ -1369,7 +1375,7 @@ body .bold {
 
 body .header {
   height: 100vh;
-  background: url(/images/Maskgroup.png) no-repeat center center fixed;
+  background: url(../images/Maskgroup.png) no-repeat center center fixed;
   background-size: cover;
   /* Navbar container */
 }
@@ -1480,7 +1486,7 @@ body .landing_page p {
 }
 
 body .economy {
-  background: url(/images/landingpagebg.png) no-repeat top right;
+  background: url(../images/landingpagebg.png) no-repeat top right;
   width: 80%;
   margin: auto;
 }
@@ -1561,8 +1567,8 @@ body .what_we_do {
   width: 90%;
   margin: 150px auto 20px auto;
   border-radius: 20px;
-  background: -webkit-gradient(linear, left top, right top, from(black), color-stop(rgba(0, 0, 0, 0.5)), to(rgba(64, 186, 123, 0))), url(/images/Group.png) no-repeat right center;
-  background: linear-gradient(to right, black, rgba(0, 0, 0, 0.5), rgba(64, 186, 123, 0)), url(/images/Group.png) no-repeat right center;
+  background: -webkit-gradient(linear, left top, right top, from(black), color-stop(rgba(0, 0, 0, 0.5)), to(rgba(64, 186, 123, 0))), url(../images/Group.png) no-repeat right center;
+  background: linear-gradient(to right, black, rgba(0, 0, 0, 0.5), rgba(64, 186, 123, 0)), url(../images/Group.png) no-repeat right center;
   color: #ffffff;
   padding: 50px 0 50px 40px;
 }
@@ -1579,8 +1585,8 @@ body .what_we_do .thin {
 
 @media (max-width: 1200px) {
   body .what_we_do {
-    background: -webkit-gradient(linear, left top, right top, from(black), color-stop(rgba(0, 0, 0, 0.5)), to(rgba(12, 27, 19, 0.9))), url(/images/Group.png) no-repeat right center;
-    background: linear-gradient(to right, black, rgba(0, 0, 0, 0.5), rgba(12, 27, 19, 0.9)), url(/images/Group.png) no-repeat right center;
+    background: -webkit-gradient(linear, left top, right top, from(black), color-stop(rgba(0, 0, 0, 0.5)), to(rgba(12, 27, 19, 0.9))), url(../images/Group.png) no-repeat right center;
+    background: linear-gradient(to right, black, rgba(0, 0, 0, 0.5), rgba(12, 27, 19, 0.9)), url(../images/Group.png) no-repeat right center;
   }
   body .what_we_do .thin {
     width: 98%;
@@ -1588,7 +1594,7 @@ body .what_we_do .thin {
 }
 
 body .latest_news {
-  background: url(/images/Layer1.png) no-repeat right top;
+  background: url(../images/Layer1.png) no-repeat right top;
   margin-left: auto;
   padding-bottom: 50px;
 }
@@ -1602,8 +1608,8 @@ body .latest_news .news {
 body .latest_news .news .cards {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(200px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 30px;
   margin-bottom: 50px;
 }
@@ -1769,7 +1775,7 @@ body .enterprise_voice .green button {
 }
 
 body .enterprise_voice .voice {
-  background: url(/images/voice.png) no-repeat center center;
+  background: url(../images/voice.png) no-repeat center center;
   padding: 30px;
   color: #ffffff;
 }
@@ -1845,11 +1851,11 @@ body .member {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: url(/images/member.png) no-repeat left top;
+  background: url(../images/member.png) no-repeat left top;
 }
 
 body .member .membership {
-  background: url(/images/membership.png) no-repeat center center;
+  background: url(../images/membership.png) no-repeat center center;
   width: 75%;
   margin: auto;
   padding: 50px;
