--- a/style/_news.scss
+++ b/style/_news.scss
@@ -1,11 +1,5 @@
 .header.news {
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4)
-    ),
-    url(../images/news.png) no-repeat center fixed;
+  background: url(../images/news.png) no-repeat center fixed;
   background-size: cover;
 }
 
