--- a/style/_greenstart.scss
+++ b/style/_greenstart.scss
@@ -1,11 +1,5 @@
 .header.greenstart {
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url(../images/greenstartbg.png) no-repeat center fixed;
+  background: url(../images/greenstartbg.png) no-repeat center fixed;
   background-size: cover;
 
   .heading.green {
