--- a/style/_member.scss
+++ b/style/_member.scss
@@ -1,13 +1,7 @@
 @import "mixins";
 
 .header.bg {
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4)
-    ),
-    url(../images/memberbg1.png) no-repeat center fixed;
+  background: url(../images/memberbg1.png) no-repeat center fixed;
   background-size: cover;
 }
 
