--- a/style/_policy.scss
+++ b/style/_policy.scss
@@ -1,10 +1,4 @@
 .header.policy {
-  background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0.4)
-    ),
-    url(../images/policy.png) no-repeat center fixed;
+  background: url(../images/policy.png) no-repeat center fixed;
   background-size: cover;
 }
