--- a/style/_agenda.scss
+++ b/style/_agenda.scss
@@ -5,7 +5,7 @@
 }
 
 .header.agenda {
-  background: url(../images/agenda.png) no-repeat center fixed;
+  background: url(../images/agenda.png) no-repeat center;
 }
 
 .agenda_wrapper {
