--- a/style/_member.scss
+++ b/style/_member.scss
@@ -1,7 +1,7 @@
 @import "mixins";
 
 .header.bg {
-  background: url(../images/memberbg1.png) no-repeat center fixed;
+  background: url(../images/memberbg1.png) no-repeat center;
   background-size: cover;
 }
 
