--- a/style/_policy.scss
+++ b/style/_policy.scss
@@ -1,4 +1,4 @@
 .header.policy {
-  background: url(../images/policy.png) no-repeat center fixed;
+  background: url(../images/policy.png) no-repeat center;
   background-size: cover;
 }
