--- a/style/_greenstart.scss
+++ b/style/_greenstart.scss
@@ -1,5 +1,5 @@
 .header.greenstart {
-  background: url(../images/greenstartbg.png) no-repeat center fixed;
+  background: url(../images/greenstartbg.png) no-repeat center;
   background-size: cover;
 
   .heading.green {
