--- a/style/_news.scss
+++ b/style/_news.scss
@@ -1,5 +1,5 @@
 .header.news {
-  background: url(../images/news.png) no-repeat center fixed;
+  background: url(../images/news.png) no-repeat center;
   background-size: cover;
 }
 
