--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -170,7 +170,7 @@
 
     &_body {
       width: 100%;
-      padding: 0 50px;
+      padding: 0 20px;
     }
 
     .image {
@@ -197,7 +197,7 @@
   }
 
   .category {
-    margin: 50px;
+    margin: 50px 20px;
   }
 
   .search {
