--- a/style/main.scss
+++ b/style/main.scss
@@ -142,7 +142,7 @@ body {
 
   .header {
     height: 100vh;
-    background: url(../images/Maskgroup.png) no-repeat center center;
+    background: url(../images/Maskgroup.png) center center fixed no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
