--- a/style/_news.scss
+++ b/style/_news.scss
@@ -1,5 +1,8 @@
 .header.news {
-  background: url(../images/news.png) no-repeat center;
+  background: url(../images/news.png) center center fixed no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
