--- a/style/_newsitem.scss
+++ b/style/_newsitem.scss
@@ -166,6 +166,7 @@
 
     &_detail {
       width: 100%;
+      font-size: 0.87em;
     }
 
     &_body {
@@ -198,6 +199,8 @@
 
   .category {
     margin: 50px 20px;
+    width: 98%;
+    font-size: 0.95em;
   }
 
   .search {
