--- a/style/main.css
+++ b/style/main.css
@@ -572,6 +572,14 @@
   }
 }
 
+@media (max-width: 600px) {
+  .membership_category .grid button {
+    margin: 0;
+    font-size: 0.9em;
+    padding: 4px;
+  }
+}
+
 .header.greenstart {
   background: url(../images/greenstartbg.png) center center fixed no-repeat;
   background-size: cover;
