--- a/style/main.css
+++ b/style/main.css
@@ -581,7 +581,8 @@
 }
 
 .header.greenstart {
-  background: url(../images/greenstartbg.png) center center fixed no-repeat;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.2)), to(rgba(0, 0, 0, 0.1))), url(../images/greenstartbg.png) center center fixed no-repeat;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1)), url(../images/greenstartbg.png) center center fixed no-repeat;
   background-size: cover;
 }
 
