--- a/style/_agenda.scss
+++ b/style/_agenda.scss
@@ -5,7 +5,7 @@
 }
 
 .header.agenda {
-  background: url(../images/agenda.png) center center fixed no-repeat;
+  background: url(../images/agenda.png) center center scroll no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
