--- a/style/_policy.scss
+++ b/style/_policy.scss
@@ -1,5 +1,5 @@
 .header.policy {
-  background: url(../images/policy.png) center center fixed no-repeat;
+  background: url(../images/policy.png) center center scroll no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
